# backup-opencode-

./: .gitignore  AGENTS.md  README.md  SYSTEM.md  antigravity.json  opencode.json
agents/: ai-engineer-agent.md  database-optimizer.md  deepthinker-agent.md  fastapi-backend-agent.md  frontend-developer.md  golang-concurrency-agent.md  performance-engineer.md  python-backend-agent.md
json_fetcher/: main.py  pyproject.toml  test_main.py
memory/: human.md  persona.md
rules/: code-scanner.md  core-rules.md  performance-optimization.md  prompt-optimize.md  rules.md
