[project]
name = "json-fetcher"
version = "0.1.0"
description = "A modern Python script to fetch and validate data from a REST API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "respx>=0.21.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "S", "B", "ANN", "RUF"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
